--- a/app/pages/category.html
+++ b/app/pages/category.html
@@ -16,7 +16,7 @@
 	
 	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
         <div class="Cell" >
-		<a onclick="cerateTravelSettlement();"><p class="addtravelSettlelogo" ></p><span style="color: #14a6c5;">&nbsp;&nbsp;Travel&nbsp;Expense&nbsp;&nbsp;</span></a></div>
+		<a onclick="synchronizeTRForTS();cerateTravelSettlement();"><p class="addtravelSettlelogo" ></p><span style="color: #14a6c5;">&nbsp;&nbsp;Travel&nbsp;Expense&nbsp;&nbsp;</span></a></div>
 		<div class="Cell" >
 		<a onclick="displayTSExp();"><p class="displayexpenselogo" ></p><span style="color: #14a6c5;">&nbsp;&nbsp; View&nbsp;Travel Expense&nbsp;</span></a></div>
 	</div>	
