--- a/app/pages/category.html
+++ b/app/pages/category.html
@@ -1,5 +1,6 @@
 
 <div class="Table">
+	<center><a><p style="color: #14a6c5;" onclick="showHelpMenu()">Expenzing Help</p></a></center>
 	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
         <div class="Cell" >
 		<a onclick="createBusinessExp();"><p class="addexpenselogo" ></p><span style="color: #14a6c5;">Business Expense</span></a>
@@ -35,5 +36,5 @@
 </div>
 
  <script>
- 		//outputEmployeeDetails(); 
+ 		//outputEmployeeDetails();
  </script>
