view alert msg chnage and synch time issue fix

--- a/app/pages/headerPageForBEOperation.html
+++ b/app/pages/headerPageForBEOperation.html
@@ -18,5 +18,10 @@
 	   <li role="presentation" align="right"><a role="menuitem" tabindex="-1" onclick="synchronizeTRForTS();">Pull Travel Request to Settle</a></li>
     </ul>
 </div>
- 
+ <div  style="display:none" id="syncSuccessMsg" class="displaysynctext">
+               Expenses synchronized successfully.
+  		</div>
+		<div  style="display:none" id="syncFailureMsg" class="displaysynctext">
+               Expenses not synchronized successfully.
+  		</div>
 </div>
