help menu page UI chnages

--- a/app/pages/helpTRTSPage.html
+++ b/app/pages/helpTRTSPage.html
@@ -6,8 +6,8 @@
 	</div>
 	<br>
 	<br>
-	<img width="29px" height="25px" src="images/delete.png">Create and submit for approval, 
-															and start your travel bookings early.
+	<img width="29px" height="25px" src="images/delete_menu.png">&nbsp;&nbsp&nbsp;Create and submit for approval, 
+															 &nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp; &nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;        and start your travel bookings early.
 
 	<div class="verticalLine">
 	</div>
@@ -25,12 +25,12 @@
 </div>
 <table>
 	<tr>	
-		<td>&nbsp;&nbsp&nbsp;<img width="35px" height="25px" src="images/synch.png" >Synch With Server<br>
-		&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;(Later, re-check and submit from the <br>
-		&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;web)</td>
+		<td>&nbsp;&nbsp&nbsp;<img width="35px" height="25px" src="images/synch_menu.png" > &nbsp;&nbsp&nbsp;Synch With Server<br>
+		&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;(Later, re-check and submit from the <br>
+		&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;&nbsp&nbsp;web)</td>
 	</tr>
 	<tr>
-		<td>&nbsp;&nbsp&nbsp;&nbsp&nbsp;<img width="29px" height="25px" src="images/delete.png">Delete</td>
+		<td>&nbsp;&nbsp&nbsp;<img width="29px" height="25px" src="images/delete_menu.png">&nbsp;&nbsp&nbsp;Delete</td>
     </tr>
 	</table>
  <script>
