--- a/app/pages/helpBEBRPage.html
+++ b/app/pages/helpBEBRPage.html
@@ -15,15 +15,15 @@
 </div>
 <table>
 	<tr>
-		<td><img  width="35px" height="25px" src="images/submit.png" >&nbsp;&nbsp&nbsp;Submit For Approval</td><br>
+		<td><img  width="35px" height="25px" src="images/submit_menu.png" >&nbsp;&nbsp&nbsp;Submit For Approval</td><br>
 	</tr>
 	<tr>	
-		<td>&nbsp;&nbsp&nbsp;<img width="35px" height="25px" src="images/synch.png" >Synch With Server<br>
+		<td><img width="35px" height="25px" src="images/synch_menu.png" >&nbsp;&nbsp&nbsp;Synch With Server<br>
 		&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;(Later, re-check and submit from the <br>
 		&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;web)</td>
 	</tr>
 	<tr>
-		<td>&nbsp;&nbsp&nbsp;&nbsp&nbsp;<img width="29px" height="25px" src="images/delete.png">Delete</td>
+		<td><img width="29px" height="25px" src="images/delete_menu.png">&nbsp;&nbsp&nbsp;Delete</td>
     </tr>
 	</table>
  <script>
