--- a/app/pages/helpMenuPage.html
+++ b/app/pages/helpMenuPage.html
@@ -2,28 +2,28 @@
 <div class="Table">
 	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
         <div class="Cell" >
-		<a onclick="showBEBRBHelp();"><p class="addexpenselogo" ></p></a>
+		<a onclick="showBEBRBHelp();"><p class="addexpenselogo" ></p><span style="color: #14a6c5;">Business Expense</span></a>
 		</div>
 		<div class="Cell" >
-		<a onclick="showBEBRBHelp();"><p class="displayexpenselogo" ></p></a>
+		<a onclick="showBEBRBHelp();"><p class="displayexpenselogo" ></p><span style="color: #14a6c5;">View Business Expense</span></a>
 		</div>
 	</div>
 	
 	<div class="Row" style="text-align: -webkit-center;">
         <div class="Cell" style="border-bottom: 1px solid #e5e5e5;">	
-		<a onclick="showTRTSHelp();"><p class="addtravellogo" ></p></a></div>
+		<a onclick="showTRTSHelp();"><p class="addtravellogo" ></p><span style="color: #14a6c5;">Travel Request</span></a></div>
 	</div>
 	
 	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
         <div class="Cell" >
-		<a onclick="showTRTSHelp();"><p class="addtravelSettlelogo" ></p></a></div>
+		<a onclick="showTRTSHelp();"><p class="addtravelSettlelogo" ></p><span style="color: #14a6c5;">&nbsp;&nbsp;Travel&nbsp;Expense&nbsp;&nbsp;</span></a></div>
 		<div class="Cell" >
-		<a onclick="showTRTSHelp();"><p class="displayexpenselogo" ></p></a></div>
+		<a onclick="showTRTSHelp();"><p class="displayexpenselogo" ></p><span style="color: #14a6c5;">&nbsp;&nbsp; View&nbsp;Travel Expense&nbsp;</span></a></div>
 	</div>	
 	
 	<div class="Row" style="text-align: -webkit-center;">
         <div class="Cell" style="border-bottom: 1px solid #e5e5e5;">
-		<a onclick="showWalletHelp();"><p class="createwalletlogo" ></p></a></div>
+		<a onclick="showWalletHelp();"><p class="createwalletlogo" ></p><span style="color: #14a6c5;">My Receipts Wallet</span></a></div>
 	</div>	
 	
 	<div>
