--- a/app/pages/helpWalletPage.html
+++ b/app/pages/helpWalletPage.html
@@ -10,14 +10,14 @@
 </div>
 <table>
 	<tr>	
-		<td>&nbsp;&nbsp&nbsp;<img width="35px" height="25px" src="images/synch.png" >Synch With Server<br>
-		&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;(Later, go to My Receipts Wallet on 
-		&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;the web)</td>
+		<td>&nbsp;&nbsp&nbsp;<img width="35px" height="25px" src="images/synch_menu.png" >&nbsp;&nbsp&nbsp;Synch With Server<br>
+		&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;(Later, go to My Receipts Wallet on 
+		&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;the web)</td>
 	</tr>
 	<br>
 	<br>
 	<tr>
-		<td>&nbsp;&nbsp&nbsp;&nbsp&nbsp;<img width="29px" height="25px" src="images/delete.png">Delete</td>
+		<td>&nbsp;&nbsp&nbsp;<img width="29px" height="25px" src="images/delete_menu.png">&nbsp;&nbsp&nbsp;Delete</td>
     </tr>
 </table>
  <script>
