--- a/app/pages/headerPageForWalletOperation.html
+++ b/app/pages/headerPageForWalletOperation.html
@@ -1,9 +1,24 @@
 <script>
-	oprationOnWallet(); 
+	oprationOnWallet();
 </script> 
 <div class="topfixednavigate" >
 <a href="#" class="backarrowbtn">
 <img src="images/left-arrow.png" width="15px" height="25px" onclick="goBack();"/>
 <img class="expenzingImg" src="images/Expenzing_Square.png" onclick="goBack();"/></a>
 <img class="selectionSynchBEBtns" width="35px" height="25px" src="images/synch.png" id="synchWallet" >
+<div class="dropdown aligndropdownv" align="right">
+    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
+	</button>
+    <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="menu1">
+       <li role="presentation" align="right"><a role="menuitem" tabindex="-1" onclick="synchronizeBEMasterData();">Sync Business Expense Master</a></li>
+       <li role="presentation" align="right"><a role="menuitem" tabindex="-1" onclick="synchronizeTRMasterData();">Sync Travel Master</a></li>
+	   <li role="presentation" align="right"><a role="menuitem" tabindex="-1" onclick="synchronizeTRForTS();">Pull Travel Request to Settle</a></li>
+    </ul>
+</div>
+ <div  style="display:none" id="syncSuccessMsg" class="displaysynctext">
+               Expenses synchronized successfully.
+  		</div>
+		<div  style="display:none" id="syncFailureMsg" class="displaysynctext">
+               Expenses not synchronized successfully.
+  		</div>
 </div>
