--- a/app/pages/helpBEBRPage.html
+++ b/app/pages/helpBEBRPage.html
@@ -1,31 +1,17 @@
 
 <div class="Table">
-	<div class="Row">
+	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
         <div class="Cell" >
-		<p class="addexpenselogo" ></p><span style="color: #14a6c5;">Enter Business Expense</span>
+		<img src="images/Part1.png" style="height: 80%;width: 100%;">
 		</div>
 	</div>
-	<p class="directionlogo" ></p>
-	<div class="Row">
+	<br>
+	<br>
+	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
         <div class="Cell" >
-		<p class="displayexpenselogo" ></p><span style="color: #14a6c5;">View Business Expense</span>
+		<img src="images/Part-2(1)_1.png" style="height: 80%;width: 100%;">
 		</div>
 	</div>
-	<p class="directionlogo" ></p>
+
 </div>
-<table>
-	<tr>
-		<td><img  width="35px" height="25px" src="images/submit_menu.png" >&nbsp;&nbsp&nbsp;Submit For Approval</td><br>
-	</tr>
-	<tr>	
-		<td><img width="35px" height="25px" src="images/synch_menu.png" >&nbsp;&nbsp&nbsp;Synch With Server<br>
-		&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;(Later, re-check and submit from the <br>
-		&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;web)</td>
-	</tr>
-	<tr>
-		<td><img width="29px" height="25px" src="images/delete_menu.png">&nbsp;&nbsp&nbsp;Delete</td>
-    </tr>
-	</table>
- <script>
- 
- </script>
+
