help menu observation point

--- a/app/pages/helpTRTSPage.html
+++ b/app/pages/helpTRTSPage.html
@@ -1,38 +1,35 @@
 <div class="Table">
-	<div class="Row">
+	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
+	
         <div class="Cell" >
-		<p class="addtravellogo" ></p><span style="color: #14a6c5;">Create a Travel Request</span>
+		<img src="images/Travel_Part_2.png" style="height: 80%;width: 100%;">
 		</div>
 	</div>
-	<br>
-	<br>
-	<img width="29px" height="25px" src="images/delete_menu.png">&nbsp;&nbsp&nbsp;Create and submit for approval, 
-															 &nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp; &nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;        and start your travel bookings early.
-
-	<div class="verticalLine">
-	</div>
-	<div class="Row">
+	</br>
+	<p style="
+    font-style: initial;
+    font-size: initial;
+    color: #0CAFD8;
+	">
+	&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;Create and submit for approval, 
+	
+	&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;and start your travel bookings early.
+	</p>
+	
+	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
+	
         <div class="Cell" >
-		<p class="addtravelSettlelogo" ></p><span style="color: #14a6c5;">Enter Travel Expenses<br> against a TR</span>
+		
+		<img src="images/Travel_Part_3.png" style="height: 80%;width: 100%;">
 		</div>
 	</div>
-	<p class="directionlogo" ></p>
-	<div class="Row">
+	
+	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
+	
         <div class="Cell" >
-		<p class="displayexpenselogo" ></p><span style="color: #14a6c5;">View Travel Expenses</span>
+		
+		<img src="images/Travel_Part1(1).png" style="height: 80%;width: 100%;">
 		</div>
 	</div>
 </div>
-<table>
-	<tr>	
-		<td>&nbsp;&nbsp&nbsp;<img width="35px" height="25px" src="images/synch_menu.png" > &nbsp;&nbsp&nbsp;Synch With Server<br>
-		&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;(Later, re-check and submit from the <br>
-		&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;&nbsp&nbsp;web)</td>
-	</tr>
-	<tr>
-		<td>&nbsp;&nbsp&nbsp;<img width="29px" height="25px" src="images/delete_menu.png">&nbsp;&nbsp&nbsp;Delete</td>
-    </tr>
-	</table>
- <script>
- 
- </script>
+
