help menu observation points

--- a/app/pages/helpBEBRPage.html
+++ b/app/pages/helpBEBRPage.html
@@ -1,17 +1,16 @@
-
 <div class="Table">
 	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
         <div class="Cell" >
-		<img src="images/Part1.png" style="height: 80%;width: 100%;">
+		<font face="verdana" size="1" color="green" style=" font-size: small;color: navy;">1</font>
+		<img src="images/Part1.png" style="height: 80%;width: 95%;">
 		</div>
 	</div>
 	<br>
 	<br>
 	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
         <div class="Cell" >
-		<img src="images/Part-2(1)_1.png" style="height: 80%;width: 100%;">
+		<font face="verdana" size="1" color="green" style=" font-size: small;color: navy;">2</font>
+		<img src="images/Part-2(1)_1.png" style="height: 80%;width: 95%;">
 		</div>
 	</div>
-
 </div>
-
