--- a/app/pages/helpMenuPage.html
+++ b/app/pages/helpMenuPage.html
@@ -1,6 +1,4 @@
-
-<div class="Table" style="padding-left: 25%";
-">
+<div class="Table" style="padding-left: 25%";">
 <center><p style="color: #19CFEF;font: caption;" >Help <img  src="images/Help_Circle_Blue.png" ></p></center>
 	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
         <div class="Cell" >
@@ -25,6 +23,6 @@
 	</div>
 
 </div>
- <script>
+<script>
  
- </script>
+</script>
