--- a/app/pages/helpTRTSPage.html
+++ b/app/pages/helpTRTSPage.html
@@ -1,26 +1,24 @@
 <div class="Table">
-	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
+	<div class="Row">
 	
         <div class="Cell" >
-		<img src="images/Travel_Part_2.png" style="height: 80%;width: 100%;">
+		<font face="verdana" size="1" color="green" style=" font-size: small;color: navy;">1</font>
+		<img src="images/Travel_Part_2.png" style="height: 80%;width: 95%;">
 		</div>
 	</div>
-	</br>
-	<p style="
-    font-style: initial;
-    font-size: initial;
-    color: #0CAFD8;
-	">
-	&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;Create and submit for approval, 
 	
-	&nbsp;&nbsp&nbsp;&nbsp;&nbsp&nbsp;and start your travel bookings early.
+	<p style="font-style: initial;font-size: initial;color: #0CAFD8;border-bottom: 1px solid #e5e5e5;">
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Create and submit for approval, 
+	
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and start your travel bookings early.
 	</p>
 	
 	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
 	
         <div class="Cell" >
 		
-		<img src="images/Travel_Part_3.png" style="height: 80%;width: 100%;">
+		<font face="verdana" size="1" color="green" style="font-size: small;color: navy;">2</font>
+		<img src="images/Travel_Part_3.png" style="height: 80%;width: 95%;">
 		</div>
 	</div>
 	
@@ -28,8 +26,8 @@
 	
         <div class="Cell" >
 		
-		<img src="images/Travel_Part1(1).png" style="height: 80%;width: 100%;">
+		<font face="verdana" size="1" color="green" style="font-size: small;color: navy;">3</font>
+		<img src="images/Travel_Part1(1).png" style="height: 80%;width: 95%;">
 		</div>
 	</div>
 </div>
-
