header added in help menu

--- a/app/pages/helpTRTSPage.html
+++ b/app/pages/helpTRTSPage.html
@@ -1,3 +1,6 @@
+ <div class="col-lg-12 clearfix allexpebtn" id="walletBox">
+    <h1>Travel Request Help</h1>
+ </div>
 <div class="Table">
 	<div class="Row">
 	
