--- a/app/pages/helpBEBRPage.html
+++ b/app/pages/helpBEBRPage.html
@@ -1,3 +1,6 @@
+ <div class="col-lg-12 clearfix allexpebtn" id="walletBox">
+    <h1>Business Expense Help</h1>
+ </div>
 <div class="Table">
 	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
         <div class="Cell" >
