--- a/app/pages/helpWalletPage.html
+++ b/app/pages/helpWalletPage.html
@@ -1,3 +1,6 @@
+ <div class="col-lg-12 clearfix allexpebtn" id="walletBox">
+    <h1>My Receipts Wallet Help</h1>
+ </div>
 <div class="Table">
 	<div class="Row" >
         <div class="Cell" >
