TR Role releated alert

--- a/app/pages/categoryMsgPage.html
+++ b/app/pages/categoryMsgPage.html
@@ -10,8 +10,8 @@ document.getElementById("headerId").innerHTML = headerValue;
 			</button>
 			<ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="menu1">
 			  <li role="presentation"><a role="menuitem" tabindex="-1" onclick="synchronizeBEMasterData()">Sync Business Expense Master</a></li>
-			   <li role="presentation"><a role="menuitem" tabindex="-1" onclick="synchronizeTRMasterData()">Sync Travel Master</a></li>
-			    <li role="presentation"><a role="menuitem" tabindex="-1" onclick="synchronizeTRForTS()">Pull Travel Request to Settle</a></li>
+			   <li role="presentation"><a role="menuitem" tabindex="-1" onclick="notActivated();">Sync Travel Master</a></li>
+			    <li role="presentation"><a role="menuitem" tabindex="-1" onclick="notActivated();">Pull Travel Request to Settle</a></li>
 			</ul>
 		</div>
 		<div  style="display:none" id="syncSuccessMsg" class="displaysynctext">
