--- a/app/pages/helpMenuPage.html
+++ b/app/pages/helpMenuPage.html
@@ -5,7 +5,7 @@
 		<a onclick="showBEBRBHelp();"><p class="addexpenselogo" ></p><span style="color: #14a6c5;">Business&nbsp;Expense&nbsp;Help</span></a>
 		</div>
 	</div>
-	
+	<div id="CategoryTrRoleID">
 	<div class="Row" style="text-align: -webkit-center;">
         <div class="Cell" style="border-bottom: 1px solid #e5e5e5;">	
 		<a onclick="showTRTSHelp();"><p class="addtravellogo" ></p><span style="color: #14a6c5;">Travel&nbsp;Request&nbsp;Help</span></a></div>
@@ -15,7 +15,7 @@
         <div class="Cell" style="border-bottom: 1px solid #e5e5e5;">
 		<a onclick="showWalletHelp();"><p class="createwalletlogo" ></p><span style="color: #14a6c5;">My&nbsp;Receipts&nbsp;Wallet&nbsp;Help</span></a></div>
 	</div>	
-	
+	</div>
 	<div>
 	  <div style="display:none" id="loading_Cat" >
             <img src="images/loading2.gif" id="loading-image_Cat" alt="Loading..." >
@@ -24,5 +24,5 @@
 
 </div>
 <script>
- 
+ hideTRIcons();
 </script>
