--- a/app/pages/headerPageForWalletOperation.html
+++ b/app/pages/headerPageForWalletOperation.html
@@ -1,5 +1,6 @@
 <script>
 	oprationOnWallet();
+	 hideTRMenus();
 </script> 
 <div class="topfixednavigate" >
 <a href="#" class="backarrowbtn">
@@ -11,8 +12,10 @@
 	</button>
     <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="menu1">
        <li role="presentation" align="right"><a role="menuitem" tabindex="-1" onclick="synchronizeBEMasterData();">Sync Business Expense Master</a></li>
-       <li role="presentation" align="right"><a role="menuitem" tabindex="-1" onclick="notActivated();">Sync Travel Master</a></li>
-	   <li role="presentation" align="right"><a role="menuitem" tabindex="-1" onclick="notActivated();">Pull Travel Request to Settle</a></li>
+	   <div id="TrRoleID">
+       <li role="presentation" align="right"><a role="menuitem" tabindex="-1" onclick="synchronizeTRMasterData();">Sync Travel Master</a></li>
+	   <li role="presentation" align="right"><a role="menuitem" tabindex="-1" onclick="synchronizeTRForTS();">Pull Travel Request to Settle</a></li>
+	   </div>
     </ul>
 </div>
  <div  style="display:none" id="syncSuccessMsg" class="displaysynctext">
