--- a/app/pages/backbtnPage.html
+++ b/app/pages/backbtnPage.html
@@ -1,8 +1,7 @@
 <script>
-
-var headerValue=headerMsg;
-document.getElementById("headerId").innerHTML = headerValue;
-
+ var headerValue=headerMsg;
+ document.getElementById("headerId").innerHTML = headerValue;
+ hideTRMenus();
 </script>
 
 <div class="topfixednavigate" > 
@@ -16,8 +15,10 @@ document.getElementById("headerId").innerHTML = headerValue;
 	</button>
     <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="menu1">
        <li role="presentation" align="right"><a role="menuitem" tabindex="-1" onclick="synchronizeBEMasterData();">Sync Business Expense Master</a></li>
-       <li role="presentation" align="right"><a role="menuitem" tabindex="-1" onclick="notActivated();">Sync Travel Master</a></li>
-	   <li role="presentation" align="right"><a role="menuitem" tabindex="-1" onclick="notActivated();">Pull Travel Request to Settle</a></li>
+	   <div id="TrRoleID">
+       <li role="presentation" align="right"><a role="menuitem" tabindex="-1" onclick="synchronizeTRMasterData();">Sync Travel Master</a></li>
+	   <li role="presentation" align="right"><a role="menuitem" tabindex="-1" onclick="synchronizeTRForTS();">Pull Travel Request to Settle</a></li>
+	   </div>
     </ul>
   </div>
   <div  style="display:none" id="syncSuccessMsg" class="displaysynctext">
