--- a/app/pages/category.html
+++ b/app/pages/category.html
@@ -1,4 +1,6 @@
-
+ <script>
+ 	hideTRIcons();
+ </script>
 <div class="Table">
 	<center><a><p style="color: #19CFEF;font: caption;" onclick="showHelpMenu()">Expenzing Help</p></a></center>
 	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
@@ -9,19 +11,19 @@
 		<a onclick="displayBusinessExp();"><p class="displayexpenselogo" ></p><span style="color: #14a6c5;">View Business Expense</span></a>
 		</div>
 	</div>
-	
+	<div id="CategoryTrRoleID">
 	<div class="Row" style="text-align: -webkit-center;">
         <div class="Cell" style="border-bottom: 1px solid #e5e5e5;">	
-		<a onclick="notActivated();"><p class="addtravellogo" ></p><span style="color: #14a6c5;">Travel Request</span></a></div>
+		<a onclick="cerateTravelReq();"><p class="addtravellogo" ></p><span style="color: #14a6c5;">Travel Request</span></a></div>
 	</div>
 	
 	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
         <div class="Cell" >
-		<a onclick="notActivated();"><p class="addtravelSettlelogo" ></p><span style="color: #14a6c5;">&nbsp;&nbsp;Travel&nbsp;Expense&nbsp;&nbsp;</span></a></div>
+		<a onclick="synchronizeTRForTS();cerateTravelSettlement();"><p class="addtravelSettlelogo" ></p><span style="color: #14a6c5;">&nbsp;&nbsp;Travel&nbsp;Expense&nbsp;&nbsp;</span></a></div>
 		<div class="Cell" >
-		<a onclick="notActivated();"><p class="displayexpenselogo" ></p><span style="color: #14a6c5;">&nbsp;&nbsp; View&nbsp;Travel Expense&nbsp;</span></a></div>
+		<a onclick="displayTSExp();"><p class="displayexpenselogo" ></p><span style="color: #14a6c5;">&nbsp;&nbsp; View&nbsp;Travel Expense&nbsp;</span></a></div>
 	</div>	
-	
+	</div>
 	<div class="Row" style="text-align: -webkit-center;">
         <div class="Cell" style="border-bottom: 1px solid #e5e5e5;">
 		<a onclick="createWallet();"><p class="createwalletlogo" ></p><span style="color: #14a6c5;">My Receipts Wallet</span></a></div>
@@ -34,7 +36,3 @@
 	</div>
 
 </div>
-
- <script>
- 		//outputEmployeeDetails();
- </script>
