phonegap camera issue

--- a/app/pages/addToWallet.html
+++ b/app/pages/addToWallet.html
@@ -9,10 +9,10 @@
 	  <li style="text-align:left;">
           <ul>
 		  Add to My Receipts Wallet
-            <img src="images/camera.png" onclick="capturePhoto(1);" width="15%" height="15%" >
-            <img src="images/gallery.png" onclick="getPhoto(pictureSource.PHOTOLIBRARY,1);" width="15%" height="15%" >
-			<img style="display:none;width:35%;height:80px;align:right;" id="smallImage" src="" />
-            <input style="display:none;" type="file" id="image2" />
+            <img src="images/camera.png" onclick="capturePhoto(1,'wallet');" width="15%" height="15%" >
+            <img src="images/gallery.png" onclick="getPhoto(pictureSource.PHOTOLIBRARY,1,'wallet');" width="15%" height="15%" >
+			<img style="display:none;width:35%;height:80px;align:right;" id="smallImageWallet" src="" />
+            <input style="display:none;" type="file" id="imageWallet" />
           </ul>
       </li>
       </div>
