phonegap camera issue

--- a/app/pages/addTravelSettlement.html
+++ b/app/pages/addTravelSettlement.html
@@ -39,10 +39,10 @@
 				<div >
 				<li style="text-align:left;">
                   <ul>
-					  <img src="images/camera.png" onclick="capturePhoto(0);" width="15%" height="15%" >
-					  <img src="images/gallery.png" onclick="getPhoto(pictureSource.PHOTOLIBRARY,0);" width="15%" height="15%" >
-					  <img style="display:none;width:40%;height:100px;align:right;" id="smallImage" src="" />
-					  <input style="display:none;" type="file" id="image2" />
+					  <img src="images/camera.png" onclick="capturePhoto(0,'TS');" width="15%" height="15%" >
+					  <img src="images/gallery.png" onclick="getPhoto(pictureSource.PHOTOLIBRARY,0,'TS');" width="15%" height="15%" >
+					  <img style="display:none;width:40%;height:100px;align:right;" id="smallImageTS" src="" />
+					  <input style="display:none;" type="file" id="imageTS" />
 				  </ul>
 				</li>
 			   </div>
