--- a/app/pages/addAnExpense.html
+++ b/app/pages/addAnExpense.html
@@ -35,7 +35,7 @@
 				<li style="text-align:left;">
                   <ul>
 					  <img src="images/camera.png" onclick="capturePhoto(0,'BE');" width="15%" height="15%" >
-					  <img src="images/gallery.png" onclick="getPhoto(pictureSource.PHOTOLIBRARY,0);" width="15%" height="15%" >
+					  <img src="images/gallery.png" onclick="getPhoto(pictureSource.PHOTOLIBRARY,0,'BE');" width="15%" height="15%" >
 					  <img style="display:none;width:40%;height:100px;align:right;" id="smallImageBE" src="" />
 					  <input style="display:none;" type="file" id="imageBE" />
 				  </ul>
