--- a/app/pages/headerPageForView.html
+++ b/app/pages/headerPageForView.html
@@ -2,7 +2,11 @@
 	abc();
 </script> 
 <div class="topfixednavigate">
-<img class="selectionDeleteBEBtns" src="images/delete.png" id="delete" >
-<img class="selectionSynchBEBtns" src="images/synch.png" id="synch" >
-<img class="selectionSubmitBEBtns" src="images/submit.png" id="send" >
+<table border="0" cellspacing="0" cellpadding="0" style="float:right; width:auto !important;">
+    <tr>
+      <td style="padding:0 5px;"><img class="selectionSubmitBEBtns" width="30px" height="30px" src="images/submit.png" id="send" ></td>
+      <td style="padding:0 5px;"><img class="selectionSynchBEBtns" width="30px" height="30px" src="images/synch.png" id="synch" ></td>
+      <td style="padding:0 5px;"><img class="selectionDeleteBEBtns" width="30px" height="30px" src="images/delete.png" id="delete" ></td>
+    </tr>
+  </table>
 </div>
