--- a/app/pages/addAnExpense.html
+++ b/app/pages/addAnExpense.html
@@ -1,62 +1,55 @@
-      <div class="modal-body clearfix">
-        <div class="row">
-          <div class="col-lg-12 clearfix addanexpense">
-            <h1>Add Business Expense</h1>
-            <div class="expenseform clearfix" data-role="page" id="page1">
-              <ul>
-                <li>
-                  <div role="main" class="ui-content">
-                    <input id="expDate" type="text" class="span2 dp1" placeholder="Date" readonly="readonly">
-                  </div>
-				</li>
-                <li>
-                  <input id="accountHead" type="hidden" style="width: 98%">
-                </li>
-                <li>
-                  <input id="expenseName" type="hidden" style="width: 98%">
-                </li>
-                <li>
-                  <input id="expFromLoc" type="text" style="width: 49%" placeholder="From Location" >
-				  <input id="expToLoc" type="text" style="width: 49%" placeholder="To Location" >
-                </li>
-                <li>
-                  <input id="expNarration" type="text" placeholder="Enter Expense Narration" >
-                </li>
-                
-				<li>
-				  <p><font face="verdana" size="1" color="green">Unit is no. of persons/Kms/meals etc.</font></span></p>
-                  <input id="expUnit" type="tel" style="width: 22%" placeholder="Units" onkeyup="calculatePerUnit();">
-				  <input id="expAmt" type="tel" style="width: 38%" placeholder="Amount" onkeyup="checkPerUnitExceptionStatusForBEAtLineLevel();">
-                  <input id="currency" type="hidden" style="width: 33%">
-				  <p id="errorMsgArea" ><span id="errorSpan"></span></p>
-				</li>
-				
-               <div >
-				<li style="text-align:left;">
-                  <ul>
-					  <img src="images/camera.png" onclick="capturePhoto(0,'BE');" width="15%" height="15%" >
-					  <img src="images/gallery.png" onclick="getPhoto(pictureSource.PHOTOLIBRARY,0,'BE');" width="15%" height="15%" >
-					  <img style="display:none;width:40%;height:100px;align:right;" id="smallImageBE" src="" />
-					  <input style="display:none;" type="file" id="imageBE" />
-				  </ul>
-				 </li>
-			   </div>
-			
-            <div  style="display:none" id="displayText" class="displayTextCSS">
-               Expenses added successfully.
-           </div>
-		   <div style="text-align:center;">
-            <button class="btn btn-primary btn-lg " style="width: 40%;height: 52px;" onclick="saveBusinessDetails(0);">Save &amp; New</button>
-            <button class="btn btn-primary btn-lg " style="width: 40%" onclick="saveBusinessDetails(1);">Save &amp; Go to Synch</button>
-			</div>
-          </div>
-          </div>
+
+<div class="modal-body clearfix">
+  <div class="row">
+    <div class="col-lg-12 clearfix addanexpense">
+      <h1>Add Business Expense</h1>
+      <div class="expenseform clearfix" data-role="page" id="page1">
+        <ul>
+          <li>
+            <div role="main" class="ui-content">
+              <input id="expDate" type="text" class="span2 dp1" placeholder="Date" readonly="readonly">
+            </div>
+          </li>
+          <li>
+            <input id="accountHead" type="hidden" style="width: 98%">
+          </li>
+          <li>
+            <input id="expenseName" type="hidden" style="width: 98%">
+          </li>
+          <li>
+            <input id="expFromLoc" type="text" style="width: 49%" placeholder="From Location" >
+            <input id="expToLoc" type="text" style="width: 49%" placeholder="To Location" >
+          </li>
+          <li>
+            <input id="expNarration" type="text" placeholder="Enter Expense Narration" >
+          </li>
+          <li>
+            <p class="specificlabel">Unit is no. of persons/Kms/meals etc.</p>
+            <input id="expUnit" type="tel" style="width: 22%" placeholder="Units" onkeyup="calculatePerUnit();">
+            <input id="expAmt" type="tel" style="width: 38%" placeholder="Amount" onkeyup="checkPerUnitExceptionStatusForBEAtLineLevel();">
+            <input id="currency" type="hidden" style="width: 33%">
+            <p id="errorMsgArea" ><span id="errorSpan"></span></p>
+          </li>
+        </ul>
+        <div >
+          <li style="text-align:left;">
+            <ul>
+              <img src="images/camera.png" onclick="capturePhoto(0,'BE');" width="15%" height="15%" > <img src="images/gallery.png" onclick="getPhoto(pictureSource.PHOTOLIBRARY,0,'BE');" width="15%" height="15%" > <img style="display:none;width:40%;height:100px;align:right;" id="smallImageBE" src="" />
+              <input style="display:none;" type="file" id="imageBE" />
+            </ul>
+          </li>
         </div>
-		<div style="display:none" id="loading_Cat" >
-               <img src="images/loading2.gif" id="loading-image_Cat" alt="Loading..." >
-		</div>
+        <div  style="display:none" id="displayText" class="displayTextCSS"> Expenses added successfully. </div>
+        <div style="text-align:center;">
+          <button class="btn btn-primary btn-lg " style="width: 40%;height: 52px;" onclick="saveBusinessDetails(0);">Save &amp; New</button>
+          <button class="btn btn-primary btn-lg " style="width: 40%" onclick="saveBusinessDetails(1);">Save &amp; Go to Synch</button>
+        </div>
       </div>
-	  <script>
+    </div>
+  </div>
+  <div style="display:none" id="loading_Cat" > <img src="images/loading2.gif" id="loading-image_Cat" alt="Loading..." > </div>
+</div>
+<script>
 var currentMonth;
 var currentDate;
 var currentYear;
@@ -80,4 +73,4 @@ var currentYear;
       getPerUnitBasedOnExpense();
   });
 		onloadExpense();
-	  </script> 
+	  </script>
