--- a/app/pages/category.html
+++ b/app/pages/category.html
@@ -1,38 +1,47 @@
- <script>
+<script>
  	hideTRIcons();
  </script>
-<div class="Table">
-	<center><a><p style="color: #19CFEF;font: caption;" onclick="showHelpMenu()">Expenzing Help</p></a></center>
-	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
-        <div class="Cell" >
-		<a onclick="createBusinessExp();"><p class="addexpenselogo" ></p><span style="color: #14a6c5;">Business Expense</span></a>
-		</div>
-		<div class="Cell" >
-		<a onclick="displayBusinessExp();"><p class="displayexpenselogo" ></p><span style="color: #14a6c5;">View Business Expense</span></a>
-		</div>
-	</div>
-	<div id="CategoryTrRoleID">
-	<div class="Row" style="text-align: -webkit-center;">
-        <div class="Cell" style="border-bottom: 1px solid #e5e5e5;">	
-		<a onclick="cerateTravelReq();"><p class="addtravellogo" ></p><span style="color: #14a6c5;">Travel Request</span></a></div>
-	</div>
-	
-	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
-        <div class="Cell" >
-		<a onclick="synchronizeTRForTS();cerateTravelSettlement();"><p class="addtravelSettlelogo" ></p><span style="color: #14a6c5;">&nbsp;&nbsp;Travel&nbsp;Expense&nbsp;&nbsp;</span></a></div>
-		<div class="Cell" >
-		<a onclick="displayTSExp();"><p class="displayexpenselogo" ></p><span style="color: #14a6c5;">&nbsp;&nbsp; View&nbsp;Travel Expense&nbsp;</span></a></div>
-	</div>	
-	</div>
-	<div class="Row" style="text-align: -webkit-center;">
-        <div class="Cell" style="border-bottom: 1px solid #e5e5e5;">
-		<a onclick="createWallet();"><p class="createwalletlogo" ></p><span style="color: #14a6c5;">My Receipts Wallet</span></a></div>
-	</div>	
-	
-	<div>
-	  <div style="display:none" id="loading_Cat" >
-            <img src="images/loading2.gif" id="loading-image_Cat" alt="Loading..." >
-	  </div>
-	</div>
 
+<div class="Table">
+  <p><img src="images/expense-banner.jpg" alt="Expenzing" style="width:100%;" /></p>
+  <center>
+    <a>
+    <p class="expensehelp" onclick="showHelpMen()">Expenzing Help</p>
+    </a>
+  </center>
+  <table class="table-responsive table-condensed">
+    <tr>
+      <td><div class="Cell clearfix"> <a onclick="createBusinessExp();">
+          <p class="addexpenselogo" ></p>
+          <span style="color: #14a6c5;">Business Expense</span></a> </div></td>
+    </tr>
+    <tr>
+      <td><div class="Cell clearfix"> <a onclick="displayBusinessExp();">
+          <p class="displayexpenselogo" ></p>
+          <span style="color: #14a6c5;">View Business Expense</span></a> </div></td>
+    </tr>
+    <tr>
+      <td><div class="Cell clearfix"> <a onclick="cerateTravelReq();">
+          <p class="addtravellogo" ></p>
+          <span style="color: #14a6c5;">Travel Request</span></a></div></td>
+    </tr>
+    <tr>
+      <td><div class="Cell clearfix"> <a onclick="cerateTravelSettlement();">
+          <p class="addtravelSettlelogo" ></p>
+          <span style="color: #14a6c5;">Travel Expense</span></a></div></td>
+    </tr>
+    <tr>
+      <td><div class="Cell clearfix"> <a onclick="displayTSExp();">
+          <p class="displayexpenselogo" ></p>
+          <span style="color: #14a6c5;">View Travel Expense</span></a></div></td>
+    </tr>
+    <tr>
+      <td><div class="Cell clearfix"> <a onclick="createWallet();">
+          <p class="createwalletlogo" ></p>
+          <span style="color: #14a6c5;">My Receipts Wallet</span></a></div></td>
+    </tr>
+  </table>
+  <div>
+    <div style="display:none" id="loading_Cat" > <img src="images/loading2.gif" id="loading-image_Cat" alt="Loading..." > </div>
+  </div>
 </div>
