vinay UI changes revert

--- a/app/pages/addToTravelRequest.html
+++ b/app/pages/addToTravelRequest.html
@@ -57,7 +57,7 @@
 					</td>
                   </tr>
 				  </table>
-				  <p class="specificlabel">Specify only if you require travel desk to book any of these 3:</span></p>
+				  <p><font face="verdana" size="1" color="green">Specify only if you require travel desk to book any of these 3:</font></span></p>
 				  <table class="table table-responsive">
                   <tr>
                     <td id="carDisabled" style="width: 100px;"><img src="images/oldcarbnw.png" onclick="setBooleanValueCar();"></td>
@@ -112,7 +112,7 @@
 					</td>
                   </tr>
 				  </table>
-				  <p class="specificlabel">Specify only if you require travel desk to book any of these 3:</span></p>
+				  <p><font face="verdana" size="1" color="green">Specify only if you require travel desk to book any of these 3:</font></span></p>
 				  <table class="table table-responsive">
                   <tr>
 					<td id="carRoundDisabled"><img src="images/oldcarbnw.png" onclick="setBooleanValueCarRound();"></td>
