vinay UI changes revert

--- a/app/pages/category.html
+++ b/app/pages/category.html
@@ -2,7 +2,7 @@
  	hideTRIcons();
  </script>
 <div class="Table">
-	<center><a><p style="color: #19CFEF;font: caption;" onclick="showHelpMenu()">Expenzing Help</p></a></center>
+	<center><a><p style="color: #19CFEF;font: caption;" onclick="showHelpMenu()">Expenzing Help</p></a>
 	<div class="Row" style="border-bottom: 1px solid #e5e5e5;">
         <div class="Cell" >
 		<a onclick="createBusinessExp();"><p class="addexpenselogo" ></p><span style="color: #14a6c5;">Business Expense</span></a>
@@ -34,5 +34,5 @@
             <img src="images/loading2.gif" id="loading-image_Cat" alt="Loading..." >
 	  </div>
 	</div>
-
+</center>
 </div>
